# pisight-uvc-gadget

./: README.md  meson.build  pisight-uvc-gadget.sh
include/: shutter.h
include/uvcgadget/: activity.h  gpio.h  led.h  meson.build  shutter.h  stream.h
lib/: activity.c  gpio.c  led.c  meson.build  shutter.c  stream.c
src/: main.c  meson.build
